--- a/src/app/features/lms/ind/components/medicals/components/result-processing/result-processing.component.html
+++ b/src/app/features/lms/ind/components/medicals/components/result-processing/result-processing.component.html
@@ -206,7 +206,7 @@
       <div>
         <div class="d-flex justify-content-start pt-3 fs-6">Decisions</div>
 
-        <div class="row px-4">
+        <div class="row px-4" decisionsForm>
           <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
             <div class="row p-0">
               <div>
