VQ-1287b | Update Ability to save Medical Decisions

--- a/src/app/features/lms/ind/components/medicals/components/result-processing/result-processing.component.css
+++ b/src/app/features/lms/ind/components/medicals/components/result-processing/result-processing.component.css
@@ -21,3 +21,8 @@
   :host ::ng-deep .ng2-pdf-viewer-container {
     overflow-x: hidden !important;
   }
+
+  .download_icon:hover{
+    color: var(--primary-color);
+    cursor: pointer;
+  }
