--- a/src/app/features/lms/ind/components/policy/components/exceptions/exceptions.component.html
+++ b/src/app/features/lms/ind/components/policy/components/exceptions/exceptions.component.html
@@ -86,7 +86,7 @@
                     <i class="fa-solid fa-ellipsis-vertical"></i>
                     <ul class="dropdown-menu">
                       <li>
-                        <a class="dropdown-item">Approve</a>
+                        <a class="dropdown-item" (click)="approveException(rowIndex)">Approve</a>
                       </li>
                       <li>
                         <a class="dropdown-item" (click)="editException(rowIndex)">Edit</a>
