--- a/src/app/features/lms/ind/components/policy/components/underwriting/underwriting.component.html
+++ b/src/app/features/lms/ind/components/policy/components/underwriting/underwriting.component.html
@@ -139,7 +139,7 @@
   <div class="modal-dialog">
     <div class="modal-content modal-content-undw  modal-content-sub-header">
       <div>
-        <div class="d-flex justify-content-end"><div style="color: red; font-size: 18px; padding: 0.5rem;">x</div></div>
+        <div (click)="closeModal()" class="d-flex justify-content-end"><div style="color: red; font-size: 18px; padding: 0.5rem; cursor:pointer">x</div></div>
         <div style="padding: 0 2rem">
           <div class="row" >
             <div class="col-lg-6 col-md-12">
