--- a/src/app/features/lms/ind/components/quotation/components/beneficiaries-dependents/beneficiaries-dependents.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/beneficiaries-dependents/beneficiaries-dependents.component.html
@@ -104,7 +104,7 @@
                       <td>{{ row["percentage_benefit"] }}</td>
                       <td>
                         {{
-                          row?.beneficiary_info?.first_name || ''
+                          row?.appointee_info?.first_name || ''
                             | titlecase
                         }}
 
