--- a/src/app/features/lms/ind/components/quotation/components/personal-details/personal-details.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/personal-details/personal-details.component.html
@@ -55,6 +55,7 @@
                     value="NEW_CLIENT"
                     formControlName="clientTypeId"
                     id="inlineRadio1"
+                    (click)="resetForm()"
                   />
                   <label class="form-check-label" for="inlineRadio1"
                     >New Client</label
