--- a/src/app/features/lms/ind/components/medicals/components/tests/tests.component.css
+++ b/src/app/features/lms/ind/components/medicals/components/tests/tests.component.css
@@ -59,3 +59,8 @@ pdf-viewer {
 :host ::ng-deep .ng2-pdf-viewer-container {
   overflow-x: hidden !important;
 }
+
+.download_icon:hover{
+  color: var(--primary-color);
+  cursor: pointer;
+}
