--- a/src/app/features/gis/components/policy/components/policy-product/policy-product.component.html
+++ b/src/app/features/gis/components/policy/components/policy-product/policy-product.component.html
@@ -91,16 +91,9 @@
 
                                     <label class="form-check-label"
                                         for="underwriters_only">{{'gis.policy.underwriters_only' | translate}}?</label>
-                                    <input class="form-check-input" type="checkbox" id="underwriters_only"
-                                        formControlName="underwritersOnly">
+                                    <input class="form-check-input" type="checkbox" id="underwriters_only">
                                 </div>
-                                <!-- <div class="form-check">
-                                    <label class="form-check-label" for="open_policy">
-                                        Underwriters only?
-                                    </label>
-                                    <input class="form-check-input" type="checkbox" value="" id="open_policy"
-                                        formControlName="underwritersOnly">
-                                </div> -->
+                               
                             </div>
                             <div class="mb-1 col-sm-4 col-12">
                                 <div class="form-check pt-4">
@@ -141,7 +134,7 @@
                                 <label for="select_ri_agent" class="product-label"
                                     id="select_ri_agent">{{'gis.policy.ri_agent' | translate}}</label>
                                 <input type="text" class="form-control form-control-sm mb-1"
-                                    formControlName="selectRiAgent">
+                                    >
                             </div>
                             <div class="mb-1 col-sm-4 col-12">
                                 <div class="form-check pt-4">
@@ -150,7 +143,7 @@
                                         for="underwriters_only_facultative">{{'gis.policy.underwriters_only' |
                                         translate}}?</label>
                                     <input class="form-check-input" type="checkbox" id="underwriters_only_facultative"
-                                        formControlName="underwritersOnlyFacultative">
+                                       >
                                 </div>
                             </div>
                             <div class="mb-1 col-sm-4 col-12">
@@ -198,12 +191,8 @@
                             <div class=" mb-1 col-sm-4 col-12">
                                 <label for="marketer" class=" product-label" id="marketer">{{'gis.policy.marketer' |
                                     translate}}</label>
-                                <!-- <select class="form-select form-control-sm mb-1 ms-n4" id="product-input"
-                                    formControlName="source">
-                                    <option value=""></option>
-
-                                </select> -->
-                                <p-dropdown [options]="marketerList" optionLabel="name"
+                               
+                                <p-dropdown [options]="marketerList" optionLabel="name" id="product-input"
                                     (onChange)="onMarketerSelected($event.value)" placeholder=" " [filterBy]="'name'"
                                     [filter]="true"></p-dropdown>
                             </div>
@@ -223,15 +212,21 @@
                         </div>
                         <!-- ROW 4 -->
                         <div class="row mb-4">
-                            <div class="  mb-1 col-sm-4 col-12">
-                                <label for="contract" class=" product-label" id="contract">{{'gis.policy.contract_name'
-                                    | translate}}</label>
-                                <select class="form-select form-control-sm mb-1 ms-n4" id="product-input"
-                                    formControlName="source">
-                                    <option value=""></option>
+                            <div class="mb-1 col-sm-4 col-12">
+                                <div class="form-check pt-4">
+                                <input class="form-check-input me-2" type="checkbox" value="" id="flexCheckDefault" #checkbox (change)="toggleSelect(checkbox.checked)">
 
-                                </select>
+                                <label class="product-label">{{'gis.policy.contract_name' | translate}}</label>
+                               
+                                </div>
+                                <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input"
+                                formControlName="source">
+                                <option value=""></option>
+                                <option ></option>
+                            </select>
                             </div>
+                            
+                            
                             <div class=" mb-1 col-sm-4 col-12">
                                 <div class="form-check pt-4">
                                     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
@@ -272,7 +267,7 @@
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" value="" id="coinsuarnce_policy">
                                     <label class="form-check-label" for="coinsuarnce_policy">
-                                        {{'gis.policy.coinsurance_policy' | translate}}
+                                        {{'gis.policy.coinsuarance_policy' | translate}}
                                     </label>
                                 </div>
                             </div>
@@ -343,12 +338,7 @@
                                                 </td>
                                             </tr>
                                         </ng-template>
-                                        <ng-template pTemplate="paginatorleft">
-                                            <p-button type="button" styleClass="p-button-text"></p-button>
-                                        </ng-template>
-                                        <ng-template pTemplate="paginatorright">
-                                            <p-button type="button" styleClass="p-button-text"></p-button>
-                                        </ng-template>
+                                        
                                     </p-table>
                                     <br>
                                     <!-- <button class="btn btn-primary float-end" data-bs-dismiss="modal" (click)="saveclient()">Save Details</button> -->
@@ -368,15 +358,24 @@
                                 <div class="modal-body">
                                     <button type="button" #closebuttonIntroducers class="float-end btn-close"
                                         data-bs-dismiss="modal" aria-label="Close"></button>
-                                    <p class="text-start" id="selectClient">Select An Introducer</p>
+                                    <p class="text-start" id="selectClient">{{'gis.policy.select_an_introducer' | translate}}</p>
 
-                                    <p-table #dt2 [value]="introducersList" [tableStyle]="{'max-width': '465px'}"
-                                        selectionMode="single" [resizableColumns]="true" styleClass="p-datatable-sm"
-                                        responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true"
-                                        [paginator]="true" [rows]="5" [scrollable]="true" scrollDirection="horizontal"
-                                        [showCurrentPageReport]="true"
-                                        currentPageReportTemplate=" {first} - {last} of {totalRecords}"
-                                        [globalFilterFields]="['surName', 'otherNames','staffNo','groupCompany']">
+                                    <p-table  #dt2
+                                    [value]="introducersList" 
+                                    [tableStyle]="{ 'max-width': '100rem' }"
+                                    [resizableColumns]="true" 
+                                    styleClass="p-datatable-sm"
+                                    class='ui-datatable' 
+                                    [globalFilterFields]="['surName', 'otherNames','staffNo','groupCompany']"
+                                    [paginator]="true"
+                                    [rows]="5"
+                                    [showCurrentPageReport]="true"
+                                    currentPageReportTemplate="{first} to {last} of {totalRecords} entries"
+                                    selectionMode="single" 
+                                    
+                                    dataKey="shortDescription">
+
+                                       
                                         <ng-template pTemplate="caption">
                                             <div class="flex">
                                                 <span class="p-input-icon-left ml-auto">
@@ -391,10 +390,10 @@
                                         <ng-template pTemplate="header">
 
                                             <tr id="product">
-                                                <th>Staff No.</th>
-                                                <th>Surname</th>
-                                                <th>Other Names</th>
-                                                <th>Company</th>
+                                                <th>{{'gis.policy.staff_no' | translate}}</th>
+                                                <th>{{'gis.policy.surname' | translate}}</th>
+                                                <th>{{'gis.policy.other_names' | translate}}</th>
+                                                <th>{{'gis.policy.company' | translate}}</th>
 
                                             </tr>
                                         </ng-template>
@@ -417,12 +416,7 @@
                                                 </td>
                                             </tr>
                                         </ng-template>
-                                        <ng-template pTemplate="paginatorleft">
-                                            <p-button type="button" styleClass="p-button-text"></p-button>
-                                        </ng-template>
-                                        <ng-template pTemplate="paginatorright">
-                                            <p-button type="button" styleClass="p-button-text"></p-button>
-                                        </ng-template>
+                                        
                                     </p-table>
                                     <br>
                                     <!-- <button class="btn btn-primary float-end" data-bs-dismiss="modal" (click)="saveclient()">Save Details</button> -->
