VQ-734:Quick Quote Cleanup

--- a/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.css
+++ b/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.css
@@ -133,7 +133,9 @@ font-size: 14px;
   }
   #shareQuoteLabel{
     font-size: 14px;
-
+  }
+  #totalPayablePremium{
+    margin-left:-15px;
   }
 
   
