--- a/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
+++ b/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
@@ -32,7 +32,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-12">
+                    <div class="col-lg-1 col-12"></div>
+                    <div class="col-lg-4 col-12 ">
                         <p class="title2">Levies and taxes</p>
                         <div *ngFor="let tax ">
                             <div class="row">
@@ -45,9 +46,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-12">
-                        <p class="title2">Total payable premium</p>
-                        <p class="payable-premium ms-4">{{risk.premium | number:'1.2-2' }}</p>
+                    <div class="col-lg-3 col-12">
+                        <p class="title2" id="totalPayablePremium">Total payable premium</p>
+                        <p class="payable-premium ">{{risk.premium | number:'1.2-2' }}</p>
 
                     </div>
                 </div>
@@ -78,7 +79,7 @@
                             <p class="modal-title mb-3" id="addMoreBenefitsLabel">Additional benefit details</p>
 
 
-                            <p-table [value]="covertypeSpecificSection" id="clientTable" dataKey="code"
+                            <p-table [value]="temporaryPremiumList" id="clientTable" dataKey="code"
                                 [tableStyle]="{ 'max-width': '50rem', 'border-spacing': '10 10px' }"
                                 [(selection)]="selectedSections" [resizableColumns]="true" styleClass="p-datatable-sm"
                                 responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true" [paginator]="true"
@@ -111,7 +112,7 @@
                                       </ng-template>
                                     </p-cellEditor>
                                   </td> -->
-                                        <td></td>
+                                        <td>{{ section.freeLimit }}</td>
 
                                         <td [pEditableColumn]="section.limitAmount" pEditableColumnField="limitAmount">
                                             <!-- <input [(ngModel)]="section.limitAmount" class="cellEditorInput"/> -->
