--- a/src/app/features/lms/grp/components/quotation/components/summary/summary.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/summary/summary.component.html
@@ -547,15 +547,13 @@
 
     </div>
     <div>
-        <button
-        type="button"
-        class="btn btn-primary back-button"
-        (click)="onBack()"
-      >Back
-      </button>
+        <button type="button" class="btn btn-primary back-button" (click)="onBack()">Back
+        </button>
       <div class="button-container">
+        <button type="button" class="btn btn-primary report-button" (click)="downloadReports()">Reports
+        </button>
         <button type="button" class="btn btn-info buttonS" (click)="onProceed()">Share</button>
-        <button type="button" class="btn btn-primary buttonP" (click)="onProceed()">Proceed</button>
+        <button type="button" class="btn btn-primary buttonP" (click)="onProceed()">Finish</button>
     </div>
 </div>
 </div>
