--- a/src/app/shared/components/policy-landing-screen/policy-landing-screen.component.html
+++ b/src/app/shared/components/policy-landing-screen/policy-landing-screen.component.html
@@ -103,7 +103,7 @@
       </div>
     </p-tabPanel>
     <p-tabPanel header="General">
-      <p>General</p>
+      <button class="btn btn-primary" [routerLink]="'/home/gis/policy/underwriting'">{{'gis.policy.underwriting' | translate}}</button>
     </p-tabPanel>
     <p-tabPanel header="Pension">
       <p>Pension</p>
